Fixed it this time - menu tended to overflow on FF, some mobile. @8col display.

--- a/css/tdtrac.css
+++ b/css/tdtrac.css
@@ -146,7 +146,7 @@ ul.topnav li div.menubut {
 	float: left;
 	position: relative;
 	background-color: #C85E35;
-	padding: .35em .4em;
+	padding: .35em .35em;
 	margin: .35em .18em;
 	border-radius: .75em;
 	box-shadow: 0px 0px 6px #888;
